--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -5,8 +5,8 @@
 	    		<!-- <div class="box_handle" title="Move this cell"> -->
 	    			<!-- <i class="icon-large icon-move" title="Move this cell"></i> -->
 	    		<!-- </div> -->
-	    		<div class="switch_color" title="Switch color"><i class="icon-cog" title="Switch color"></i></div>
-		    	<textarea value ="<%=contents%>" class="text_box"></textarea>
+	    		<div class="switch_color" title="Switch color"><img src="{{STATIC_URL}}img/icon-color.png" /></div>
+		    	<textarea value ="<%=contents%>" class="text_box" maxlength="256"></textarea>
 	    	</div>
     	</div>
     </div>
