--- a/phtc/templates/logic_model/subtemplates/help_box.html
+++ b/phtc/templates/logic_model/subtemplates/help_box.html
@@ -1,10 +1,16 @@
-<div class="help_box">this is just a placeholder.</div>
+<div class="modal help_box">this is just a placeholder.</div>
 <script type="text/template" id="logic-model-help-box">
-	<div class="popover-parent">
-	  <h3 class="popover-title"><%=help_title%></h3>
-	 	<div class="popover-content">
-		  <%=help_body%>
-		</div>
-		  <div class="pull-center"><div class="btn btn-primary">Close</div></div>
-	</div>
+    <div class="modal-header help-header">
+        <button class="close">×</button>
+        <h3><%=help_title%> column</h3>
+    </div>
+    <div class="modal-body">
+        <div>
+        <%=help_meaning%>
+        <%=help_body%>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <div class="btn btn-logicmodel btn-success">Close</div>
+    </div>
 </script>
