Update external links to https://

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -54,10 +54,10 @@
     <header id="masthead">
         <h1></h1>
         <h4 id="logo-ccnmtl">
-            <a href="http://ccnmtl.columbia.edu" target="_blank"
-            title="Columbia Center for New Media Teaching and Learning">
+            <a href="https://ctl.columbia.edu" target="_blank"
+            title="Columbia Center for Teaching and Learning">
               <span>
-              Produced by the Columbia Center for New Media Teaching
+              Produced by the Columbia Center for Teaching
               and Learning
               </span>
             </a>
