--- a/phtc/templates/main/completer_email.html
+++ b/phtc/templates/main/completer_email.html
@@ -1,6 +1,6 @@
 <p>Congratulations on successfully completing the online training program {{ label }}.</p>
 
-<p>You may now access your certificate of completion for this program. Simply, <a href="http://{{ host }}/dashboard/">click here</a> to return to your personal dashboard; a link to your certificate is <a href="http://{{ host }}/certificate{{ abs_url }}">here</a>.</p>
+<p>You may now access your certificate of completion for this program. Simply, <a href="https://{{ host }}/dashboard/">click here</a> to return to your personal dashboard; a link to your certificate is <a href="http://{{ host }}/certificate{{ abs_url }}">here</a>.</p>
 
 <p>To request continuing education credit for this training program, please write to phtc@columbia.edu. In an email, please include your name, contact information, and the type of credit you are requesting, and a staff member of the New  York City-Long Island-Lower Tri County Public Health Training Center will follow-up with you shortly.</p>
 
